# faiss-gpu-wheels

./: CMakeLists.txt  README.md
.github/workflows/: build_wheel.yml
script/: build.sh
variant/gpu-cu12/: _preload_library.json
variant/gpu-cu124/: config.toml  pyproject.toml
